[package]
name = "rusty-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
zip = "0.6.2"
rand = "0.8.5"
genawaiter = "0.99.1"
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
resvg = "0.24.0"
ureq = {version = "2.6.1",features = ["json"]}
clap = {version="4.0.32", features=["derive"]}
chrono = "0.4.23"
indicatif = "0.17.3"
uuid = {version = "1.4.1", features = ["v4","fast-rng"]}
