[package]
name = "rusty-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
zip = "0.6.2"
rand = "0.8.5"
resvg = "0.24.0"
ureq = {version = "2.6.1",features = ["json"]}
clap = {version="4.0.32", features=["derive"]}
chrono = "0.4.23"
indicatif = "0.17.3"
uuid = {version = "1.4.1", features = ["v4","fast-rng"]}
nom = "7.1.3"
sdl2 = "0.36"
glium = "0.34"
image = "0.25.1"
regex = "1.10.4"
